feat: expose recording session api
